# pilotproject-protokollierungsassistenz

./: .env.example  .gitattributes  .gitignore  README.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml  extract_moderator_transcript.py  minutes_generator.py  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: docker-build-push.yml  docker-publish.yml
app/backend/: Dockerfile  Dockerfile.gpu  Dockerfile.gpu.ampere  extract_tops.py  main.py  pyproject.toml  summarize.py  transcribe.py
app/frontend/: Dockerfile  nginx.conf  package-lock.json  tsconfig.tsbuildinfo  vite.config.js
app/frontend/src/: App.tsx  api.ts  types.ts
app/frontend/src/components/: AssignmentStep.tsx  LLMSettingsPanel.tsx  Layout.tsx  ProcessingStep.tsx  SpeakerNameEditor.tsx  SummaryStep.tsx  UploadStep.tsx
k8s/: README.md  deploy.sh  ingress.yaml  kustomization.yaml  namespace.yaml
k8s/backend/: configmap.yaml  deployment.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/secrets/: example-secret.yaml  sealed-secret.yaml
scripts/: extract_moderator_transcript.py  moderator_segmentation.py  moderator_segmentation_70B.py  ollama-entrypoint.sh  pyproject.toml  segment_transcript.py
scripts/llama-70b/: llama-deploy.yaml  llama-pvc.yaml  llama-service.yaml
scripts/old/: llm_protocol_generator.py  llm_protocol_generator_sequential.py  llm_protocol_generator_single_pass.py  llm_summarise_transcript.py  segment_transcript.py
