[project]
name = "tuiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "llama-index-core>=0.14.5",
    "llama-index-embeddings-huggingface>=0.6.1",
    "numpy>=2.3.4",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
