[project]
name = "tuiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.2.1",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    # Pin huggingface_hub to <1.0 until whisperx/pyannote update to use 'token' instead of 'use_auth_token'
    "huggingface_hub>=0.24.0,<1.0",
]
