[project]
name = "tuiv-backend"
version = "0.1.0"
description = "Backend API for Meeting Minutes Generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.0.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "whisperx>=3.7.0",
]
